cm-acme-http-solver-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    auth.istio.io/8089: NONE
    cloud.google.com/neg: '{"ingress":true}'
  creationTimestamp: "2024-08-27T07:01:00Z"
  generateName: cm-acme-http-solver-
  labels:
    acme.cert-manager.io/http-domain: "700908769"
    acme.cert-manager.io/http-token: "1008078468"
    acme.cert-manager.io/http01-solver: "true"
  name: cm-acme-http-solver-97pxl
  namespace: default
  ownerReferences:
  - apiVersion: acme.cert-manager.io/v1
    blockOwnerDeletion: true
    controller: true
    kind: Challenge
    name: tennis-reg-tls-598mm-3201749216-3196195507
    uid: 203e8803-766b-4c96-aa1f-8a1146e24eb4
  resourceVersion: "21934"
  uid: 13bef5ae-11f6-411a-8fca-97fd0b84b2c4
spec:
  clusterIP: 34.118.238.0
  clusterIPs:
  - 34.118.238.0
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 8089
    protocol: TCP
    targetPort: 8089
    nodePort: 31580  # Specify the NodePort here
  selector:
    acme.cert-manager.io/http-domain: "700908769"
    acme.cert-manager.io/http-token: "1008078468"
    acme.cert-manager.io/http01-solver: "true"
  sessionAffinity: None
  type: NodePort  # Ensure type is NodePort
status:
  loadBalancer: {}
